@@ -1,3 +1,8 @@
+2004-09-06  Sushma Rai  <rsushma@novell.com>
+
+	* storage/xc-commands.c: Disabled menu options for 
+	move and copy folders.  See #62440
+
 2004-09-02  Dan Winship  <danw@novell.com>
 
 	* lib/*: Various updates to doc comments, with a few changes to
